mba & contact pages added

--- a/public/department/cultural.html
+++ b/public/department/cultural.html
@@ -50,46 +50,32 @@
                               <img src="../assets/logo.png" alt="">
                             </div>
                             <div class="row">
-                              <div class="col-md-4">
+                              <div class="col-md-6">
                                   <div class="jumbotron single_service wow fadeInRight">
                                       <div class="service_icon center">
-                                        <i class="fas fa-phone-volume fa-3x"></i>
+                                      <i class="fas fa-users fa-3x"></i>
                                       </div>
                                       <div class="s_service_text text-sm-center  text-xs-center">
-                                          <h4>Electronics And Communication Engineering</h4>
+                                          <h4>Group Dance</h4><br>
                                       </div>
 
                                       <div class="service_btn center">
-                                          <a href="./ece.html" class="btn btn-danger waves-effect waves-red"><i class="fas fa-hand-point-right"></i>&nbsp;Click Me</a>
+                                          <!-- <a class="btn btn-danger waves-effect waves-red"><i class="fas fa-hand-point-right"></i>&nbsp;Click Me</a> -->
                                       </div>
                                   </div>
                               </div>
                               <div clas
-                                <div class="col-md-4">
+                                <div class="col-md-6">
                                     <div class="jumbotron single_service wow fadeInRight">
                                         <div class="service_icon center">
-                                          <i class="fas fa-bolt fa-3x"></i>
+                                        <i class="fas fa-music fa-3x"></i>
                                         </div>
                                         <div class="s_service_text text-sm-center  text-xs-center">
-                                            <h4>Electrical & Electronics Engineering</h4><br>
+                                            <h4>Musical Band</h4><br>
                                         </div>
 
                                         <div class="service_btn center">
-                                            <a href="./eee.html" class="btn btn-danger waves-effect waves-red"><i class="fas fa-hand-point-right"></i>&nbsp;Click Me</a>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="col-md-4">
-                                    <div class="jumbotron single_service  wow fadeInLeft">
-                                        <div class="service_icon center">
-                                          <i class="fas fa-motorcycle fa-3x"></i>
-                                        </div>
-                                        <div class="s_service_text text-sm-center text-xs-center">
-                                            <h4>Department of Mechanical Engineering</h4><br>
-                                        </div>
-
-                                        <div class="service_btn center">
-                                            <a href="./mech.html" class="btn btn-danger waves-effect waves-red"><i class="fas fa-hand-point-right"></i>&nbsp;Click Me</a>
+                                            <!-- <a class="btn btn-danger waves-effect waves-red"><i class="fas fa-hand-point-right"></i>&nbsp;Click Me</a> -->
                                         </div>
                                     </div>
                                 </div>
@@ -97,58 +83,6 @@
                         </div>
                     </div>
                 </div>
-                <div class="row">
-                    <div class="col-sm-12">
-                        <div class="main_service_area">
-                            <div class="row">
-                              <div class="col-md-4">
-                                  <div class="jumbotron single_service wow fadeInRight">
-                                      <div class="service_icon center">
-                                      <i class="fas fa-desktop fa-3x"></i>
-                                      </div>
-                                      <div class="s_service_text text-sm-center  text-xs-center">
-                                          <h4>Computer Science Engineering</h4><br>
-                                      </div>
-
-                                      <div class="service_btn center">
-                                          <a href="./cse.html" class="btn btn-danger waves-effect waves-red"><i class="fas fa-hand-point-right"></i>&nbsp;Click Me</a>
-                                      </div>
-                                  </div>
-                              </div>
-                              <div clas
-                                <div class="col-md-4">
-                                    <div class="jumbotron single_service wow fadeInRight">
-                                        <div class="service_icon center">
-                                          <i class="fas fa-fighter-jet fa-3x"></i>
-                                        </div>
-                                        <div class="s_service_text text-sm-center  text-xs-center">
-                                            <h4>Aerospace <br>engineering</h4><br>
-                                        </div>
-
-                                        <div class="service_btn center">
-                                            <a href="./aero.html" class="btn btn-danger waves-effect waves-red"><i class="fas fa-hand-point-right"></i>&nbsp;Click Me</a>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="col-md-4">
-                                    <div class="jumbotron single_service  wow fadeInLeft">
-                                        <div class="service_icon center">
-                                          <i class="fas fa-graduation-cap fa-3x"></i>
-                                        </div>
-                                        <div class="s_service_text text-sm-center text-xs-center">
-                                            <h4>Master of Business Administration</h4><br>
-                                        </div>
-
-                                        <div class="service_btn center">
-                                            <a href="./mba.html" class="btn btn-danger waves-effect waves-red "><i class="fas fa-hand-point-right"></i>&nbsp;Click Me</a>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
             <hr />
         </section> <!-- End of service section -->
 
