--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 
 
             	<li><a href="./department/techevent.html"> Technical Events</a><span class="hover-li"></span></li>
-						<li><a href="#wrap"> Cultural Events</a><span class="hover-li"></span></li>
+						<li><a href="./department/cultural.html"> Cultural Events</a><span class="hover-li"></span></li>
 						<li><a href="#about">About</a><span class="hover-li"></span></li>
 						<li><a href="#contact">Contact</a><span class="hover-li"></span></li>
 					</ul>
@@ -120,11 +120,15 @@
 					</div>
 					<div class="col-sm-6 wow fadeInRight">
 						<div class="about-text">
-							<p> KIT-Kalaignarkarunanidhi Institute of Technology conducting an InterCollege Meet , UDHAYAM 2k18 </p>
-
-							<p> UDHAYAM 2k18 is Platform to Explore your Talents,it'sone of the biggest event in Allover india,udhayam boostup your energy & help to reach your next level on your talents. </p>
-
+							<p>UDHAYAM aims to encourage the participation of technocrats and gives practical exposure.</p>
+							<p> It is a Technical fest to share knowledge and to improve technical skills in specific field.</p>
+              <p>It lays the platform for the participants to showcase their inborn talents.</p>
+							<p>It enriches the technical knowledge by connecting students from campuses all over India.</p>
 						</div>
+					</div>
+					<div class="col-lg-12 about-text">
+						<p>It brings them the new energy to establish their talents among the various people from various colleges.</p>
+						<p>It helps in establishing their colleges fame among other colleges.</p>
 					</div>
 				</div>
 			</div>
@@ -136,6 +140,30 @@
 					<div class="col-xs-12">
 						<div class="title text-center wow zoomIn">
 							<h1>CONTACT US</h1>
+							<span class="title line"></span>
+						</div>
+					</div>
+				</div>
+				<div class="col-lg-12">
+					<div class="col-lg-6">
+						<h1 style="color:#9d46af">Faculty Coordinators</h1>
+						<p>Dr.S Suresh</p>
+						<p>9994280004</p>
+						<p>S Sri Venkatesh</p>
+						<p>9789574769</p>
+					</div>
+					<div class="col-lg-6">
+					<h1 style="color:#9d46af">Student Coordinators</h1>
+					<p>N Vethagiri</p>
+					<p>7904234930</p>
+					<p>R Umabalakumar</p>
+					<p>9788217258</p>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-xs-12">
+						<div class="title text-center wow zoomIn">
+							<h1>FIND US</h1>
 							<span class="title line"></span>
 						</div>
 					</div>
@@ -167,7 +195,6 @@
 					</div>
 
 					<div class="col-sm-6  wow fadeInRight">
-						<p><i class="fas fa-hand-point-down"></i>&nbsp;Find Us Here</p>
 						<div class="facebook-box">
 							<div id="googleMap" style="width:100%;height:325px;"></div>
 						<div class="social-icons">
