--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 		</section>
 
 		<section>
-			<nav id="nav-menu" class="navbar nav-layla" role="navigation">
+			<!-- <nav id="nav-menu" class="navbar nav-layla" role="navigation">
 
 				<div class="navbar-header">
 					<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".main-nav">
@@ -89,19 +89,29 @@
 					<a class="navbar-brand">UDHAYAM 2K18</a>
 				</div>
 
-				<div class=" collapse navbar-collapse main-nav">
-
-
+				<div class=" ">
 					<ul class="nav navbar-nav navbar-right">
-
-
             	<li><a href="./department/techevent.html"> Technical Events</a><span class="hover-li"></span></li>
 						<li><a href="./department/cultural.html"> Cultural Events</a><span class="hover-li"></span></li>
 						<li><a href="#about">About</a><span class="hover-li"></span></li>
 						<li><a href="#contact">Contact</a><span class="hover-li"></span></li>
 					</ul>
 				</div>
-			</nav>
+			</nav> -->
+			<nav id="nav-menu" 	class="navbar navbar-inverse">
+  <div class="container-fluid">
+    <div class="navbar-header">
+    <a class="navbar-brand color1">UDHAYAM 2K18</a>
+    </div>
+		<ul class="nav navbar-nav navbar-right">
+				<li><a href="./department/techevent.html" class=" color"> Technical Events</a><span class="hover-li"></span></li>
+			<li><a href="./department/cultural.html" class=" color"> Cultural Events</a><span class="hover-li"></span></li>
+			<li><a href="#about" class=" color">About</a><span class="hover-li"></span></li>
+			<li><a href="#contact" class=" color">Contact</a><span class="hover-li"></span></li>
+		</ul>
+  </div>
+</nav>
+
 		</section>
 
 		<section id="about">
@@ -147,17 +157,17 @@
 				<div class="col-lg-12">
 					<div class="col-lg-6">
 						<h1 style="color:#9d46af">Faculty Coordinators</h1>
-						<p>Dr.S Suresh</p>
-						<p>9994280004</p>
-						<p>S Sri Venkatesh</p>
-						<p>9789574769</p>
+						<p><i class="fas fa-hand-point-right"></i>&nbsp;Dr.S Suresh</p>
+						<p>&nbsp;&nbsp;&nbsp;&nbsp;9994280004</p>
+						<p><i class="fas fa-hand-point-right"></i>&nbsp;S Sri Venkatesh</p>
+						<p>&nbsp;&nbsp;&nbsp;&nbsp;9789574769</p>
 					</div>
 					<div class="col-lg-6">
 					<h1 style="color:#9d46af">Student Coordinators</h1>
-					<p>N Vethagiri</p>
-					<p>7904234930</p>
-					<p>R Umabalakumar</p>
-					<p>9788217258</p>
+					<p><i class="fas fa-hand-point-right"></i>&nbsp;N Vethagiri</p>
+					<p>&nbsp;&nbsp;&nbsp;&nbsp;7904234930</p>
+					<p><i class="fas fa-hand-point-right"></i>&nbsp;R Umabalakumar</p>
+					<p>&nbsp;&nbsp;&nbsp;&nbsp;9788217258</p>
 					</div>
 				</div>
 				<div class="row">
