dance and band are added

--- a/public/department/cultural.html
+++ b/public/department/cultural.html
@@ -50,32 +50,31 @@
                               <img src="../assets/logo.png" alt="">
                             </div>
                             <div class="row">
-                              <div class="col-md-6">
-                                  <div class="jumbotron single_service wow fadeInRight">
-                                      <div class="service_icon center">
-                                      <i class="fas fa-users fa-3x"></i>
-                                      </div>
-                                      <div class="s_service_text text-sm-center  text-xs-center">
-                                          <h4>Group Dance</h4><br>
-                                      </div>
-
-                                      <div class="service_btn center">
-                                          <!-- <a class="btn btn-danger waves-effect waves-red"><i class="fas fa-hand-point-right"></i>&nbsp;Click Me</a> -->
-                                      </div>
-                                  </div>
-                              </div>
-                              <div clas
                                 <div class="col-md-6">
-                                    <div class="jumbotron single_service wow fadeInRight">
+                                    <div class="jumbotron single_service  wow fadeInLeft">
                                         <div class="service_icon center">
-                                        <i class="fas fa-music fa-3x"></i>
+                                          <i class="fas fa-users fa-3x"></i>
                                         </div>
-                                        <div class="s_service_text text-sm-center  text-xs-center">
-                                            <h4>Musical Band</h4><br>
+                                        <div class="s_service_text text-sm-center text-xs-center">
+                                            <h4>Group dance</h4>
                                         </div>
 
                                         <div class="service_btn center">
-                                            <!-- <a class="btn btn-danger waves-effect waves-red"><i class="fas fa-hand-point-right"></i>&nbsp;Click Me</a> -->
+                                          <a class="btn btn-danger waves-effect waves-red" data-toggle="modal" data-target="#1">See  More</a>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-md-6">
+                                    <div class="jumbotron single_service wow fadeInUp">
+                                        <div class="service_icon center">
+                                            <i class="fas fa-music fa-3x"></i>
+                                        </div>
+                                        <div class="s_service_text text-sm-center text-xs-center">
+                                            <h4>Group Singing (band)</h4>
+                                        </div>
+
+                                        <div class="service_btn center">
+                                            <a class="btn btn-danger waves-effect waves-red" data-toggle="modal" data-target="#2">See  More</a>
                                         </div>
                                     </div>
                                 </div>
@@ -83,6 +82,7 @@
                         </div>
                     </div>
                 </div>
+            </div>
             <hr />
         </section> <!-- End of service section -->
 
@@ -99,6 +99,61 @@
                 </div>
             </div>
         </section>
+
+<!-- modal -->
+
+
+  <!-- Modal 1 -->
+  <div class="modal fade" id="1" role="dialog">
+    <div class="modal-dialog">
+
+      <!-- Modal content-->
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal">&times;</button>
+          <h4 class="modal-title">Group dance</h4>
+        </div>
+        <div class="modal-body">
+          <p><i class="fas fa-arrow-circle-right"></i>&nbsp;Minimum 3 participants per team.</p>
+          <p><i class="fas fa-arrow-circle-right"></i>&nbsp;Time limit maximum 8 minutes.</p>
+          <p><i class="fas fa-arrow-circle-right"></i>&nbsp;No vulgarity in songs and dance.</p>
+          <p><i class="fas fa-arrow-circle-right"></i>&nbsp;No usage of fire, mud or any particles that causes the damage on the floor.</p>
+          <p><i class="fas fa-arrow-circle-right"></i>&nbsp;Judges decision will be final.</p>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        </div>
+      </div>
+
+    </div>
+  </div>
+
+  <!-- Modal 2 -->
+  <div class="modal fade" id="2" role="dialog">
+    <div class="modal-dialog">
+
+      <!-- Modal content-->
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal">&times;</button>
+          <h4 class="modal-title">Group Singing (band)</h4>
+        </div>
+        <div class="modal-body">
+          <p><i class="fas fa-arrow-circle-right"></i>&nbsp;This is a single or group event.</p>
+            <p><i class="fas fa-arrow-circle-right"></i>&nbsp;Group registration only. </p>
+              <p><i class="fas fa-arrow-circle-right"></i>&nbsp;Performance must be only in Indian languages.</p>
+                <p><i class="fas fa-arrow-circle-right"></i>&nbsp;Limit: 8 minutes( +2minutes for arrangements) </p>
+                  <p><i class="fas fa-arrow-circle-right"></i>&nbsp;Vulgarity and obscenity will not be encouraged and will lead to disqualification.</p>
+                    <p><i class="fas fa-arrow-circle-right"></i>&nbsp;A band should consist minimum of 4 members and maximum of 8.</p>
+                      <p><i class="fas fa-arrow-circle-right"></i>&nbsp;Instruments Provided :  One drum kit. </p>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        </div>
+      </div>
+
+    </div>
+  </div>
 
         <!-- /Start your project here-->
 
