--- a/public/department/techevent.html
+++ b/public/department/techevent.html
@@ -122,7 +122,7 @@
                                           <i class="fas fa-fighter-jet fa-3x"></i>
                                         </div>
                                         <div class="s_service_text text-sm-center  text-xs-center">
-                                            <h4>Aerospace <br>engineering</h4><br>
+                                            <h4>Aeronautical <br>engineering</h4><br>
                                         </div>
 
                                         <div class="service_btn center">
