--- a/public/department/cultural.html
+++ b/public/department/cultural.html
@@ -139,7 +139,7 @@
           <h4 class="modal-title">Group Singing (band)</h4>
         </div>
         <div class="modal-body">
-          <p><i class="fas fa-arrow-circle-right"></i>&nbsp;This is a single or group event.</p>
+          <p><i class="fas fa-arrow-circle-right"></i>&nbsp;This is a group event.</p>
             <p><i class="fas fa-arrow-circle-right"></i>&nbsp;Group registration only. </p>
               <p><i class="fas fa-arrow-circle-right"></i>&nbsp;Performance must be only in Indian languages.</p>
                 <p><i class="fas fa-arrow-circle-right"></i>&nbsp;Limit: 8 minutes( +2minutes for arrangements) </p>
